# whatsapp-llm

./: .gitignore  Ankit.txt  CODE_OVERVIEW.md  LICENSE  PERSONA_IMPROVEMENTS.md  README.md  cleaned_data.jsonl  config.example.yaml  elizaos_character.py  evaluate_persona.py  finetune.py  main.py  parser.py  persona.py  persona_template.yaml  privacy.py  pyproject.toml  requirements.txt  sample_chat.txt  test_elizaos_formatter.py  test_parser.py  wrangler.toml
.github/workflows/: ci.yml
docs/: digital-brain-poc.md  digital-self-explainer.md  persona-authenticity-source-corpus.jsonl  persona-methods-study.md
living_brain/: __init__.py  main.py
living_brain/brain/: __init__.py  consolidation.py  coverage.py  demo.py  evaluation.py  inspection.py  migration.py  models.py  simulation.py
living_brain/core/: __init__.py  config.py
living_brain/identity/: __init__.py  builder.py  evaluation.py  interview.py  models.py  prompt.py  sources.py  wacli.py  whatsapp_mac.py
living_brain/inference/: __init__.py  chat.py  dataset_ui.py  orchestrator.py
living_brain/ingest/: __init__.py  persona_dataset.py  sample_recommender.py  style_analyzer.py  watcher.py  whatsapp_parser.py
living_brain/memory/: __init__.py  consolidator.py  fact_store.py  retriever.py  vector_store.py
living_brain/research/: __init__.py  corpus.py  council.py  synthesis.py
living_brain/style/: __init__.py  adapter_manager.py  data_formatter.py  trainer.py
research/digital-self-council/: README.md  contradictions.md  corpus-manifest.json  corpus-report.json  corpus-summary.json  corpus.jsonl  council.yaml  elicitation-map.md  evidence-map.json  paper.schema.json  synthesis.md  taxonomy.md
research/digital-self-council/prompts/: cross-review.md  seat.md
research/digital-self-council/reviews/: cognitive_memory.reviewed-by-narrative_identity.md  digital_twins_agents.reviewed-by-privacy_identity_safety.md  evaluation_fidelity.reviewed-by-values_decisions_emotion.md  longitudinal_modeling.reviewed-by-social_relationships.md  narrative_identity.reviewed-by-psychometrics.md  persona_dialogue.reviewed-by-cognitive_memory.md  privacy_identity_safety.reviewed-by-evaluation_fidelity.md  psychometrics.reviewed-by-digital_twins_agents.md  social_relationships.reviewed-by-persona_dialogue.md  values_decisions_emotion.reviewed-by-longitudinal_modeling.md
samples/: persona_summary.txt  processed_training_data.jsonl  training_data.jsonl
site/: _headers  index.html  main.js  styles.css
site/docs/: docs.css  index.html
tasks/: lessons.md
tests/: test_brain_consolidation.py  test_brain_coverage.py  test_brain_evaluation.py  test_brain_guided_cli.py  test_brain_simulation.py  test_digital_brain_model.py  test_digital_self_builder.py  test_digital_self_cli.py  test_digital_self_evaluation.py  test_digital_self_runtime.py  test_identity_model.py  test_identity_sources.py  test_ingest_regressions.py  test_persona_dataset_privacy.py  test_persona_pipeline.py  test_pr_review_regressions.py  test_reliability_regressions.py  test_research_corpus.py  test_research_council.py  test_research_synthesis.py
(+30 files in other folders)
