[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "living-brain"
version = "0.1.0"
description = "Local WhatsApp persona dataset, character-file, fine-tuning, and memory workbench"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Living Brain Contributors"}
]
keywords = [
    "ai", "llm", "fine-tuning", "personal-assistant", "whatsapp",
    "lora", "rag", "memory", "chatbot", "persona", "dpo",
    "qlora", "character-card", "elizaos"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Core functionality (parsing and memory)
core = [
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
]

# Training with Unsloth (fastest)
train = [
    "unsloth[colab-new] @ git+https://github.com/unslothai/unsloth.git",
    "torch>=2.0.0",
    "datasets>=2.14.0",
    "trl>=0.7.0",
    "peft>=0.6.0",
    "transformers>=4.36.0",
    "accelerate>=0.24.0",
    "bitsandbytes>=0.41.0",
]

# Training without Unsloth (slower but more compatible)
train-compat = [
    "torch>=2.0.0",
    "datasets>=2.14.0",
    "trl>=0.7.0",
    "peft>=0.6.0",
    "transformers>=4.36.0",
    "accelerate>=0.24.0",
    "bitsandbytes>=0.41.0",
]

# Inference with llama.cpp
inference-gguf = [
    "llama-cpp-python>=0.2.0",
]

# Chat interface
chat = [
    "gradio>=4.0.0",
]

# File watching for continuous updates
watch = [
    "watchdog>=3.0.0",
]

# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

# All dependencies (except train which needs special handling)
all = [
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
    "datasets>=2.14.0",
    "trl>=0.7.0",
    "peft>=0.6.0",
    "transformers>=4.36.0",
    "accelerate>=0.24.0",
    "bitsandbytes>=0.41.0",
    "llama-cpp-python>=0.2.0",
    "gradio>=4.0.0",
    "watchdog>=3.0.0",
]

[project.scripts]
living-brain = "living_brain.main:main"

[project.urls]
Homepage = "https://github.com/Amal-David/whatsapp-llm"
Documentation = "https://github.com/Amal-David/whatsapp-llm#readme"
Repository = "https://github.com/Amal-David/whatsapp-llm"

[tool.setuptools.packages.find]
include = ["living_brain*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=living_brain --cov-report=term-missing"
